--- a/QtWeatherClient.ui
+++ b/QtWeatherClient.ui
@@ -50,6 +50,16 @@
      </rect>
     </property>
    </widget>
+   <widget class="QListView" name="listViewCityInfo">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>90</y>
+      <width>361</width>
+      <height>331</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
